fix: spacing pading update codeờ

--- a/src/components/common/QueueTable/QueueTable.css
+++ b/src/components/common/QueueTable/QueueTable.css
@@ -1,5 +1,4 @@
 .container {
     width: 100%;
     border-radius: 8px;
-    padding: 20px;
 }
