--- a/src/components/layout/MainLayout.css
+++ b/src/components/layout/MainLayout.css
@@ -14,7 +14,6 @@
   background: #ffffff;
   padding-left: 20px;
   padding-right: 20px;
-  text-align: ;
 }
 
 .body_content {
