--- a/src/pages/Customer/customer.css
+++ b/src/pages/Customer/customer.css
@@ -1,6 +1,5 @@
 .container {
     background-color: white;
-    padding: 20px;
 }
 
 .Title_callManagement {
